--- a/style.css
+++ b/style.css
@@ -2,31 +2,19 @@
     margin:0;
     padding:0;
 }
-.navbar-nav,.card-text{
-    font-family: 'Quattrocento Sans', sans-serif;
-}
-.navbar-brand{
+.card-text{
     font-family: 'Quattrocento Sans', sans-serif;
 }
 .wrapper{
-    background: #fff100;
-    height:100vh;
-    border-image-source: url('./assets/bg.svg') 3px solid;
-}
-.myCol{
-    background: url(./assets/A64C21CB-F84E-49DF-B346-FD2476D9BDCD-removebg-preview.png) no-repeat center center;
-    height:100vh;
+    /* background:linear-gradient(to right,#ced4da,#edf3fe);  */
+   background-image:linear-gradient(80deg,white,eef8ff);
+   height:100vh;
 }
 .introHello{
-    background:#FFF75E;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-}
-.testCol{
-    margin-left: auto;
-    background: #FFF75E;
+    height:85vh;
 }
 .namaskar{
     font-family: 'Handlee', cursive;
@@ -45,20 +33,8 @@
     color:black;
     text-decoration: none;
 }
-.whyMe{
-    height:fit-content;
-    display: flex;
-    background: #F6F7F9;
-    font-family: 'Nunito', sans-serif;
-}
 
-.ideaClass{
-   font-size:22px;
-}
-.t3{
-    border:1px black solid;
-}
-.buildOne,.ideaCol,.getContact{
+.getContact{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,12 +42,12 @@
 }
 .skillSet{
     background: #282736;
-    padding:30px;
+    padding:10px;
 }
 .skillSet>.row>.display-4{
     color:white;
     text-align:center;
-    letter-spacing:2px;
+    letter-spacing:1px;
     text-transform: uppercase;
     font-family: 'Nunito', sans-serif;
 }
@@ -81,34 +57,20 @@
     font-size:10vh;
     justify-content: space-evenly;
 }
-.myPort{
-    background: white;
-}
 
-.card{
-    width: minmax(300px,100%);
-    min-height:300px;
-    border-radius:5px;
-}
-.card>img{
-    max-height: 20vh;
-}
-.card-text{
-    margin-top:15px;
-    letter-spacing: 1.4px;
-    text-align: center;
-}
-.techUsed{
-    display: inline-block;
-}
-.projectLinks,.projectLinks:visited{
-    font-size:2rem;
-    color:#e76f51;
-}
 .contact{
     background: #eff1f3;
 }
 .rocket{
     font-size:20vh;
     color: #2176ff;
+}
+.heroImg{
+    height:80vh;
+
+}
+.tCol{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
